# peggy

./: .gitignore  Cargo.toml
.github/workflows/: rust-ci.yml
actions-bot/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  tailwind.css
frontend/src/: error.rs  header.rs  main.rs
frontend/src/header/: auth.rs
frontend/src/header/auth/: event_bus.rs
