[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-agent = "0.1"
console_log = { version = "0.2", features = ["color"] }
log = { version = "0.4", features = ["std"] }
anyhow = { version = "1", features = ["std"] }
